# VirtualLandRegistry

./: .gitignore  Cargo.toml  README.md  dfx.json  install.sh  package-lock.json  package.json
virtual_land_registry_backend/: Cargo.toml  deploy-ic.sh  deploy.sh  dfx.json  virtual_land_registry_backend.did
virtual_land_registry_backend/src/: lib.rs
virtual_land_registry_backend/src/src/virtual_land_registry_backend/: index.d.ts  index.js  virtual_land_registry_backend.did  virtual_land_registry_backend.did.d.ts  virtual_land_registry_backend.did.js
virtual_land_registry_frontend/: .babelrc  package.json  webpack.config.js
virtual_land_registry_frontend/public/: index.html  manifest.json
virtual_land_registry_frontend/src/: App.css  App.js
virtual_land_registry_frontend/src/components/: Analytics.js  ErrorState.js  LandCard.js  LandDetails.js  LandForm.js  LandRegistry.js  Lands.js  Loader.js  Marketplace.js  Modal.js  MyLands.js  ThemeToggle.js  Toast.js
virtual_land_registry_frontend/src/declarations/virtual_land_registry_backend/: index.js  virtual_land_registry_backend.did.js
virtual_land_registry_frontend/src/styles/: App.css  components.css  index.css
virtual_land_registry_frontend/src/utils/: api.js  helpers.js
