[package]
name = "virtual_land_registry_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ic-stable-structures = { workspace = true }
