[package]
name = "virtual_land_registry_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.6"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true